Fix navigation div on mobile devices

--- a/src/modules/layout/components/header/Header.module.css
+++ b/src/modules/layout/components/header/Header.module.css
@@ -149,7 +149,7 @@
     z-index: 1;
     position: fixed;
     top: 0;
-    right: -50%;
+    right: -100%;
 
     display: flex;
     flex-direction: column;
